--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,76 @@
-# Java build files
-/bin
-/build
-/.gradle
-*.class
-*.jar
-*.war
-*.ear
+# Created by https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,gradle
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,visualstudiocode,gradle
 
-# IDEs
-*.iml
-.idea/
+### Java ###
+# Compiled class file
+*.class
+
+# Log file
 *.log
 
-# OS files
-.DS_Store
-Thumbs.db
+# BlueJ files
+*.ctxt
 
-# Ignore Gradle project-specific cache directory
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+### Gradle ###
 .gradle
+**/build/
+!src/**/build/
 
-# Ignore Gradle build output directory
-build
+# Ignore Gradle GUI config
+gradle-app.setting
 
-# for IntelliJ IDEA and some Java tools
-out/
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
-# Ignore Eclipse project files
-.classpath
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
+
+# Cache of project
+.gradletasknamecache
+
+# Eclipse Gradle plugin generated files
+# Eclipse Core
 .project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
-# Vim swap files
-*.swp
-*.swo
+### Gradle Patch ###
+# Java heap dump
+*.hprof
 
-# Temporary files
-*.tmp
+# End of https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,gradle
