--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id 'java'
     id 'application'
@@ -12,12 +11,13 @@ repositories {
 }
 
 dependencies {
-     implementation 'com.formdev:flatlaf:3.6'
+    implementation 'com.formdev:flatlaf:3.4'
+    implementation 'com.formdev:flatlaf-intellij-themes:3.4'
     implementation 'org.passay:passay:1.6.0'
 }
 
 application {
-    mainClass = 'com.oumaima.sarot_tool.Main'
+    mainClass = 'com.oumaima.sarottool.Main'
 }
 
 java {
